{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "2d1751be-4dbe-4a4b-ab66-878a22f49912",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "72582b3f-7dfb-45fe-a5d0-f000fa2209d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "3d5b1d85-76b9-491c-af94-09e4bf030564",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8ad968c1-664b-4936-ac19-c0efeafc4100",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "View",
                    "type": "Value",
                    "id": "4d7bd6ff-9fa7-43f1-af41-0342c990fa5c",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.5,y=0.5),ScaleVector2(x=0.1,y=0.1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AttackWithMelee",
                    "type": "Button",
                    "id": "2f4c11e1-cf20-4935-adb0-5f140602eb5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zip",
                    "type": "Button",
                    "id": "3bb9873f-9513-44b9-a93b-53e2df0086a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "51b21621-27e6-4f06-90fe-d3f771a2f000",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9525b66f-e649-4ba8-94ec-4dcfae1108c4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d976ebf-43c4-489b-b830-fdaf3fdda29b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "7dc0b3e0-847c-441e-b3ab-50ceecf3b6a1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3d4916b1-b1e4-4f4c-9038-d9a5d594acde",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2ee11540-8db0-4814-ac69-2a2a5ee2dac6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5bfa3c28-2614-4c44-8fb6-dc238b0cc2a2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "07c6673c-d56c-42ff-ae35-5c77001c0d72",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8cfd8fa0-6fb7-4cdd-a3ce-06c8e720f849",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackWithMelee",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b94c2305-b92c-40e3-82c1-00921e0ac623",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zip",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}